styles/projects.css
#topBar{
	position: fixed;
	top: 0px;
	left: 0px;
	background-color: #007FFF;
	min-height: 50px;
	width: 100%;
	box-shadow: 0px 4px #404040;
}
#nav a{
	color:white;
	text-decoration: none;
	font-size: 20px;
	font-family: Tahoma;
	float:left;
	padding: 10px;
	text-shadow: 2px 1.5px 2px #000000;
}
#nav :hover a{
	transform: scale(.9);
	background-color: transparent;
}
#nav{
	list-style-type: none;
	margin: 1px;
	padding: 1px;
}
body {
	margin-top: 4rem;
	background-color: #757575;
}
#footer{
	position: absolute;
	top: 120%;
	left: 40%;
	font-size: 10px;
	font-family: tahoma;
}
#pageTitle{
	font-family: Tahoma, Arial;
	font-size: 4em;
	text-align: center;
	color: white;
}
.ghLink a{
	margin-left: 45%;
	color: blue;
	text-decoration: none;
	font-family: Tahoma, Arial;
}
a:hover{
	background-color: blue;
	color: white;
}
.button{
	border: 2px solid blue;
	border-radius: 10px;
    padding: 10px 20px;
    text-align: center;
    text-decoration: none;
}
.pTitle{
	font-family: Tahoma, Arial;
	font-size: 2rem;
}
.project{
	font-family: Tahoma, Arial;
	margin-top: 5rem;
	background-color: white;
	border-radius: 25px;
	padding: 5px;
	width: 55rem;
}
.previewImg{
	height: 20em;
	padding: 5px;
}

